사진 추가, intro 페이지 틀 & 글자 넣기

--- a/index.html
+++ b/index.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>오승민 (Seungmin)</title>
-    <link rel="stylesheet" href="style/reset.css"/>
-    <link rel="stylesheet" href="style/style.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="src/img/favicon.png"
-    />
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>오승민 (Seungmin)</title>
+      <link rel="stylesheet" href="style/reset.css"/>
+      <link rel="stylesheet" href="style/style.css" />
+      <link
+        rel="icon"
+        type="image/png"
+        sizes="16x16"
+        href="src/img/favicon.png"
+      />
+      <title>Document</title>
+  </head>
+  <body>
+      <main id="app">
+        <section class="section-intro">
+          <header id="header">
+            <h1 class="txt-invisible">Portfolio</h1>
+            <nav>
+              <ul class="nav-list">
+                <li><a href="#about" class="list-link">About</a></li>
+                <li><a href="#project" class="list-link">Project</a></li>
+                <li><a href="#contact" class="list-link">Contact</a></li>
+                <li>
+                  <a
+                    href="https://whalekimm.github.io/OSS_MidTerm_Project/"
+                    class="list-link btn-code"
+                    >code</a
+                  >
+                </li>
+              </ul>
+            </nav>
+            <div class="bar-bg">
+              <span class="bar-ing"></span>
+            </div>
+          </header>
+  
+          <div class="cont-intro">
+            <a name="info"></a>
+            <img src="src/img/profile.png" alt="프로필 이미지" />
+            <div>
+              <p class="txt-title"></p>
+              <a href="#about" class="btn-more">More</a>
+            </div>
+          </div>
+        </section> 
+        <button onclick="moveToTop()" class="btn-moveTop"></button>
+        <script src="index.js"></script>
+      </main>
+  </body>
 </html>
