사진 크기 수정, about 부분 완성

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                   <a
                     href="https://whalekimm.github.io/OSS_MidTerm_Project/"
                     class="list-link btn-code"
-                    >code</a
-                  >
+                    >code
+                  </a>
                 </li>
               </ul>
             </nav>
@@ -48,6 +48,60 @@
             </div>
           </div>
         </section> 
+
+        <section class="section-about">
+          <a name="about"></a>
+          <h2>About.</h2>
+          <div class="cont-about">
+            <div class="slide-container">
+              <div class="slide-album">
+                <div class="slide-images">
+                  <img src="src/img/img_me_1.png" alt="내 사진" />
+                  <img src="src/img/img_me_2.png" alt="내 사진" />
+                  <img src="src/img/img_me_3.png" alt="내 사진" />
+                  <img src="src/img/img_me_5.png" alt="내 사진" />
+                  <img src="src/img/img_me_4.png" alt="내 사진" />
+                </div>
+                <button class="btn-next">▶</button>
+                <button class="btn-prev">◀</button>
+              </div>
+            </div>
+            <div class="info-about">
+              <dl class="txt-about">
+                <div>
+                  <dt>이름</dt>
+                  <dd>오승민</dd>
+                </div>
+                <div>
+                  <dt>생년월일</dt>
+                  <dd>01.07.09</dd>
+                </div>
+                <div>
+                  <dt>거주지</dt>
+                  <dd>용인시 수지구</dd>
+                </div>
+                <div>
+                  <dt>학교/전공</dt>
+                  <dd>단국대학교/컴퓨터공학과</dd>
+                </div>
+              </dl>
+              <div class="btn-about">
+                <button class="btn-open" type="button">
+                  <img src="src/img/icon-diary.png" alt="" />취미
+                </button>
+                <button class="btn-open" type="button">
+                  <img src="src/img/icon-heart.png" alt="" />성격
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="description">
+            <p>**이 사진은 생성형 AI를 이용한 사진입니다**</p>
+          </div>
+  
+        </section>
+
+        
         <button onclick="moveToTop()" class="btn-moveTop"></button>
         <script src="index.js"></script>
       </main>
