--- a/index.html
+++ b/index.html
@@ -98,9 +98,32 @@
           <div class="description">
             <p>**이 사진은 생성형 AI를 이용한 사진입니다**</p>
           </div>
-  
         </section>
-
+        <div class="modal-background">
+          <div class="modal">
+            <h3>취미</h3>
+            <h4>클라이밍</h4>
+            <video src="src\img\mp4-climb.mp4" controls alt="클라이밍 동영상"></video>
+            <p>
+              취미는 클라이밍이에요. 문제를 풀며 즐거움을 느끼고,<br>
+              다음 단계로 계속 도전하는 과정을 즐깁니다.<br>
+              최근에 LV6 문제를 풀었습니다!!
+            </p>
+            <button type="button" class="btn-close">Close</button>
+          </div>
+        </div>
+        <div class="modal-background">
+          <div class="modal">
+            <h3>성격</h3>
+            <h4>체계적이고 승부욕이 강해요</h4>
+            <img src="src/img/img-char.png" alt="판다 사진" />
+            <p>
+              하루를 계획하고 행동하는 것을 좋아하고,<br>
+              한 번 승부가 붙으면 지지 않으려는 경향이 강합니다.
+            </p>
+            <button type="button" class="btn-close">Close</button>
+          </div>
+        </div>
         
         <button onclick="moveToTop()" class="btn-moveTop"></button>
         <script src="index.js"></script>
