--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                   <dd>단국대학교/컴퓨터공학과</dd>
                 </div>
               </dl>
+              <div class="description">
+                <p>**이 사진은 생성형 AI를 이용한 사진입니다**</p>
+              </div>
               <div class="btn-about">
                 <button class="btn-open" type="button">
                   <img src="src/img/icon-diary.png" alt="" />취미
@@ -95,10 +98,8 @@
               </div>
             </div>
           </div>
-          <div class="description">
-            <p>**이 사진은 생성형 AI를 이용한 사진입니다**</p>
-          </div>
         </section>
+
         <div class="modal-background">
           <div class="modal">
             <h3>취미</h3>
@@ -124,7 +125,38 @@
             <button type="button" class="btn-close">Close</button>
           </div>
         </div>
-        
+
+        <section class="section-project">
+          <a name="project"></a>
+          <h2>Project.</h2>
+          <article class="box-project">
+            <div>
+              <img
+                class="img-project"
+                src="src/img/project1.PNG"
+                alt="첫번째 프로젝트 이미지"
+              />
+              <button
+                class="btn-detail"
+                type="button"
+                onclick="location.href='https://whalekimm.github.io/lottoNumGenerator/';"
+              >
+                자세히 보기
+              </button>
+            </div>
+            <div class="txt-project">
+              <h3>행운생성기</h3>
+              <dl>
+                <dt>기간</dt>
+                <dd>2024.03</dd>
+                <dt>설명</dt>
+                <dd>로또 번호를 자동/반자동으로 생성해주는 사이트입니다.</dd>
+                <dt>사용 기술</dt>
+                <dd>HTML/CSS, JavaScript</dd>
+              </dl>
+            </div>
+          </article>
+        </section>
         <button onclick="moveToTop()" class="btn-moveTop"></button>
         <script src="index.js"></script>
       </main>
