--- a/index.html
+++ b/index.html
@@ -157,6 +157,33 @@
             </div>
           </article>
         </section>
+        <footer id="footer">
+          <a name="contact"></a>
+          <div class="box-footer">
+            <h2>Contact.</h2>
+            <ul class="link-sns">
+              <li>
+                <a href="https://github.com/WhaleKimm"
+                  ><img
+                    class="img-github"
+                    src="src/img/icon-github.png"
+                    alt="깃허브 주소"
+                  />github</a
+                >
+              </li>
+              <li>
+                <a href="https://whalekimm.tistory.com/"
+                  ><img
+                    class="img-tistory"
+                    src="src/img/icon-tistory.png"
+                    alt="블로그 주소"
+                  />Blog</a
+                >
+              </li>
+            </ul>
+            <p>2024 - Seungmin</p>
+          </div>
+        </footer>
         <button onclick="moveToTop()" class="btn-moveTop"></button>
         <script src="index.js"></script>
       </main>
