--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +28,7 @@
                 <li><a href="#contact" class="list-link">Contact</a></li>
                 <li>
                   <a
-                    href="https://whalekimm.github.io/OSS_MidTerm_Project/"
+                    href="https://whalekimm.github.io/Introduction/"
                     class="list-link btn-code"
                     >code
                   </a>
@@ -84,10 +85,12 @@
                   <dt>학교/전공</dt>
                   <dd>단국대학교/컴퓨터공학과</dd>
                 </div>
+                <div>
+                  <div class="description">
+                    <dd>**이 사진은 생성형 AI를 이용한 사진입니다**</dd>
+                  </div>
+                </div>
               </dl>
-              <div class="description">
-                <p>**이 사진은 생성형 AI를 이용한 사진입니다**</p>
-              </div>
               <div class="btn-about">
                 <button class="btn-open" type="button">
                   <img src="src/img/icon-diary.png" alt="" />취미
@@ -139,7 +142,7 @@
               <button
                 class="btn-detail"
                 type="button"
-                onclick="location.href='https://whalekimm.github.io/lottoNumGenerator/';"
+                onclick="window.open('https://whalekimm.github.io/lottoNumGenerator/', '_blank')"
               >
                 자세히 보기
               </button>
