project.png 확장자 수정

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div>
               <img
                 class="img-project"
-                src="src/img/project1.PNG"
+                src="src/img/project1.png"
                 alt="첫번째 프로젝트 이미지"
               />
               <button
