--- a/index.html
+++ b/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
   <head>
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>오승민 (Seungmin)</title>
       <link rel="stylesheet" href="style/reset.css"/>
       <link rel="stylesheet" href="style/style.css" />
-      <link
-        rel="icon"
-        type="image/png"
-        sizes="16x16"
-        href="src/img/favicon.png"
-      />
+      <link rel="icon" type="image/png" sizes="16x16" href="src/img/favicon.png" />
       <title>Document</title>
+      <!-- Apple specific tags -->
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+      <link rel="apple-touch-icon" href="src/img/favicon.png">
   </head>
   <body>
       <main id="app">
@@ -26,13 +24,7 @@
                 <li><a href="#about" class="list-link">About</a></li>
                 <li><a href="#project" class="list-link">Project</a></li>
                 <li><a href="#contact" class="list-link">Contact</a></li>
-                <li>
-                  <a
-                    href="https://whalekimm.github.io/Introduction/"
-                    class="list-link btn-code"
-                    >code
-                  </a>
-                </li>
+                <li><a href="https://github.com/WhaleKimm/Introduction" class="list-link btn-code">code</a></li>
               </ul>
             </nav>
             <div class="bar-bg">
